--- a/index.html
+++ b/index.html
@@ -1,21 +1,308 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biker Zone</title>
+    <!-- tailwind and dasyui cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google font poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- tailwind custom classes -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              "primary-color": "#E76F51",
+              "primary-color-bg": "#E76F511A",
+            },
+          },
+        },
+      };
+    </script>
+
+    <style>
+      * {
+        font-family: "Poppins", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <!-- header section -->
-    <header></header>
+    <header class="my-8 md:container md:mx-auto">
+      <!-- nav start -->
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 text-base rounded-box w-52"
+              >
+                <li><a>Home</a></li>
+                <li>
+                  <a href="">Shop</a>
+                </li>
+                <li><a>News</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <a class="btn btn-ghost text-4xl">Biker Zone</a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu text-base menu-horizontal px-1">
+              <li><a>Home</a></li>
+              <li>
+                <a href="">Shop</a>
+              </li>
+              <li><a>News</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a class="btn bg-primary-color text-white">Login</a>
+          </div>
+        </div>
+      </nav>
+
+      <!-- slider and carousel -->
+      <div class="carousel w-full lg:h-[550px] bg-primary-color-bg">
+        <!-- slide 1 -->
+
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
+            <div class="lg:w-1/2 space-y-2 lg:space-y-7">
+              <h2 class="text-3xl text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p class="text-lg font-light">
+                Amet minim mollit non deserunt <br />ullamco est sit aliqua
+                dolor do amet sint. Velit officia consequat duis enim velit
+                mollit.
+              </p>
+
+              <button class="btn bg-primary-color text-white">Purchase</button>
+            </div>
+            <div class="">
+              <img src="./images/slider/bike3.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slide 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
+            <div class="lg:w-1/2 space-y-2 lg:space-y-7">
+              <h2 class="text-3xl text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p class="text-lg font-light">
+                Amet minim mollit non deserunt <br />ullamco est sit aliqua
+                dolor do amet sint. Velit officia consequat duis enim velit
+                mollit.
+              </p>
+
+              <button class="btn bg-primary-color text-white">Purchase</button>
+            </div>
+            <div class="">
+              <img src="./images/slider/bike1.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
+            <div class="lg:w-1/2 space-y-2 lg:space-y-7">
+              <h2 class="text-3xl text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p class="text-lg font-light">
+                Amet minim mollit non deserunt <br />ullamco est sit aliqua
+                dolor do amet sint. Velit officia consequat duis enim velit
+                mollit.
+              </p>
+
+              <button class="btn bg-primary-color text-white">Purchase</button>
+            </div>
+            <div class="">
+              <img src="./images/slider/bike2.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide 4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
+            <div class="lg:w-1/2 space-y-2 lg:space-y-7">
+              <h2 class="text-3xl text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p class="text-lg font-light">
+                Amet minim mollit non deserunt <br />ullamco est sit aliqua
+                dolor do amet sint. Velit officia consequat duis enim velit
+                mollit.
+              </p>
+
+              <button class="btn bg-primary-color text-white">Purchase</button>
+            </div>
+            <div class="">
+              <img src="./images/slider/bike4.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- main section -->
-    <main></main>
+    <main class="container mx-auto">
+      <!-- featured Bikes in This Year section -->
+      <section class="my-20">
+        <h3 class="text-5xl font-semibold text-center">
+          Fetured Bikes In This Year
+        </h3>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-20"
+        >
+          <div class="">
+            <img
+              class="w-full grayscale"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </div>
+          <div class="">
+            <img class="w-full" src="./images/others/feature-bike.png" alt="" />
+          </div>
+          <div class="grayscale">
+            <img class="w-full" src="./images/others/feature-bike.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- latest news section -->
+      <section class="my-24">
+        <h3 class="text-5xl font-semibold text-center mb-12">latest News</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+          <!-- card 1 -->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="./images/others/latest1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-semibold">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-base font-normal text-[#6C6C6C]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-primary-color text-white">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="./images/others/latest2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl font-semibold">
+                Motorcycles & Scooters
+              </h2>
+              <p class="text-base font-normal text-[#6C6C6C]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-primary-color text-white">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="./images/others/latest3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-semibold">
+                2021 Honda CBR500R
+              </h2>
+              <p class="text-base font-normal text-[#6C6C6C]">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-primary-color text-white">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--  -->
+    </main>
     <!-- footer section -->
     <footer></footer>
   </body>
