added the faq sction

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           Fetured Bikes In This Year
         </h3>
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-20"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mt-20 lg:w-3/4 lg:mx-auto"
         >
           <div class="">
             <img
@@ -236,6 +236,9 @@
 
       <!-- latest news section -->
       <section class="my-24">
+        <h3 class="text-5xl font-semibold text-center">
+          Fetured Bikes In This Year
+        </h3>
         <h3 class="text-5xl font-semibold text-center mb-12">latest News</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
           <!-- card 1 -->
@@ -301,7 +304,227 @@
         </div>
       </section>
 
-      <!--  -->
+      <!-- happy clients section -->
+      <section>
+        <h3 class="text-5xl font-semibold text-center">
+          Happy <span class="text-primary-color">Clients says</span>
+        </h3>
+
+        <!-- cards -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-16 gap-11"
+        >
+          <!-- card-1 -->
+          <div class="card bg-base-100 p-9 border border-gray-200 rounded-none">
+            <figure>
+              <img class="w-1/2" src="./images/others/user-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center m-2">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <div class="text-center">
+                <h4 class="text-sm font-semibold text-info m-2">
+                  Regina Miles
+                </h4>
+                <p>Banker</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 2 -->
+          <div class="card bg-base-100 p-9 border border-gray-200 rounded-none">
+            <figure>
+              <img class="w-1/2" src="./images/others/user-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center m-2">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <div class="text-center">
+                <h4 class="text-sm font-semibold text-info m-2">
+                  Regina Miles
+                </h4>
+                <p>Banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="card bg-base-100 p-9 border border-gray-200 rounded-none">
+            <figure>
+              <img class="w-1/2" src="./images/others/user-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center m-2">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <div class="text-center">
+                <h4 class="text-sm font-semibold text-info m-2">
+                  Regina Miles
+                </h4>
+                <p>Banker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Faq section -->
+      <section>
+        <h3 class="text-5xl font-semibold text-center mb-10">
+          Frequently Asked<span class="text-primary-color"> Questions</span>
+        </h3>
+
+        <div class="card lg:card-side gap-20">
+          <figure>
+            <img class="" src="./images/others/faq.png" alt="Album" />
+          </figure>
+          <div class="card-body lg:w-1/2">
+            <div class="join join-vertical w-full">
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should know about riding
+                  a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">
+                  What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer section -->
     <footer></footer>
