added the FAQ section

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                   How can I tell if my helmet is old and I need a new one?
                 </div>
                 <div class="collapse-content">
-                  <p>hello</p>
+                  <p>hello.</p>
                 </div>
               </div>
               <div
