added the footer section

--- a/index.html
+++ b/index.html
@@ -527,6 +527,34 @@
       </section>
     </main>
     <!-- footer section -->
-    <footer></footer>
+    <footer
+      class="footer p-10 text-neutral-content bg-[#0B0D17] flex justify-between items-center"
+    >
+      <aside class="">
+        <div class="flex gap-4">
+          <p>Download Now</p>
+          <p>License</p>
+        </div>
+        <ul class="flex gap-4">
+          <li>About</li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Careers</li>
+          <li>Help</li>
+          <li>Privacy Policy</li>
+        </ul>
+
+        <p class="text-[#D9DBE1] font-light text-sm">
+          © 2020 bike. All rights reserved
+        </p>
+      </aside>
+      <nav>
+        <header class="footer-title">Get The App</header>
+        <div class="grid grid-cols-1 gap-4">
+          <a><img class="w-36" src="./images/others/android.png" alt="" /></a>
+          <a><img class="w-36" src="./images/others/ios.png" alt="" /></a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
