completed the website

--- a/index.html
+++ b/index.html
@@ -528,14 +528,14 @@
     </main>
     <!-- footer section -->
     <footer
-      class="footer p-10 text-neutral-content bg-[#0B0D17] flex justify-between items-center"
+      class="footer p-10 text-neutral-content bg-[#0B0D17] flex justify-between items-center mt-8"
     >
       <aside class="">
         <div class="flex gap-4">
           <p>Download Now</p>
           <p>License</p>
         </div>
-        <ul class="flex gap-4">
+        <ul class="flex flex-col md:flex-row gap-4">
           <li>About</li>
           <li>Features</li>
           <li>Pricing</li>
