--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div id="slide1" class="carousel-item relative w-full">
           <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
             <div class="lg:w-1/2 space-y-2 lg:space-y-7">
-              <h2 class="text-3xl text-6xl font-bold">
+              <h2 class="text-6xl font-bold">
                 Ride-on R15 V4 <br />
                 with Smile
               </h2>
@@ -129,7 +129,7 @@
         <div id="slide2" class="carousel-item relative w-full">
           <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
             <div class="lg:w-1/2 space-y-2 lg:space-y-7">
-              <h2 class="text-3xl text-6xl font-bold">
+              <h2 class="text-6xl font-bold">
                 Ride-on R15 V4 <br />
                 with Smile
               </h2>
@@ -156,7 +156,7 @@
         <div id="slide3" class="carousel-item relative w-full">
           <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
             <div class="lg:w-1/2 space-y-2 lg:space-y-7">
-              <h2 class="text-3xl text-6xl font-bold">
+              <h2 class="text-6xl font-bold">
                 Ride-on R15 V4 <br />
                 with Smile
               </h2>
@@ -183,7 +183,7 @@
         <div id="slide4" class="carousel-item relative w-full">
           <div class="flex flex-col lg:flex-row p-5 lg:p-24 gap-5">
             <div class="lg:w-1/2 space-y-2 lg:space-y-7">
-              <h2 class="text-3xl text-6xl font-bold">
+              <h2 class="text-6xl font-bold">
                 Ride-on R15 V4 <br />
                 with Smile
               </h2>
